# disk-drill

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: carver.rs  commands.rs  disk_image.rs  drive.rs  export.rs  filesystem.rs  lib.rs  main.rs  scanner.rs
src/components/: DiskImageModal.tsx  DriveSelector.tsx  ExportModal.tsx  FileExplorer.tsx  HexViewer.tsx  ScanProgress.tsx
src/store/: useAppStore.ts
src/styles/: index.css
src/types/: index.ts
