[package]
name = "rescur-app"
version = "0.1.0"
description = "RescuR - Professional Cross-Platform Data Recovery Engine"
authors = ["RescuR Team"]
edition = "2021"

[lib]
name = "rescur_app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-process = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
sysinfo = "0.30"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

